syntax = "proto2";
option java_package = "HBaseAPI.Coprocessor";
option java_outer_classname = "MyFirstCoprocessor";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option optimize_for = SPEED;

package hbase.pb;
import "Client.proto";

message MyFirstRequest {
    required string family = 1;
    required string columns = 2;
    optional Scan scan = 3;
}

message MyFirstResponse {
    required int64 count = 1;
    required string values = 2;
}

service TestService {
  rpc getAvg(MyFirstRequest)
    returns (MyFirstResponse);
}